--- a/Dockerfile.save.1
+++ b/Dockerfile.save.1
@@ -1,8 +1,9 @@
 FROM node:12.18-alpine
+RUN export METEOR_ALLOW_SUPERUSER=true
 WORKDIR /src
 COPY package.json .
 RUN npm i
 COPY . .
-RUN npm run-script build
+
 EXPOSE 3003
 CMD ["npm", "run", "start"]
