--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_TITLE=Hello AliteProjects team How To React
+REACT_APP_TITLE=Hello Good morning AliteProjects team How To React
 REACT_APP_DESCRIPTION=Using .env file in React js
 
