--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_TITLE=Hello AWs team How To React
+REACT_APP_TITLE=React Sample App Updated
 REACT_APP_DESCRIPTION=Using .env file in React js
 
