recreate yaml file

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 621151048552.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=621151048552.dkr.ecr.us-east-1.amazonaws.com/react-app-poc
+      - REPOSITORY_URI=621151048552.dkr.ecr.us-east-1.amazonaws.com/alite-event-new
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
@@ -22,6 +22,6 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"react-frontapp","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"alite-event-backend-new","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files: imagedefinitions.json
